--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="https://unpkg.com/vue-material"></script>
     <script>;
         Vue.use(VueMaterial.default);
-        var HOST = location.origin.replace('https', 'wss');
+        var HOST = location.origin.replace('https', 'wss') + '/websocket';
         var ws = new WebSocket(HOST);
         var app = new Vue({
             el: '#app',
