--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script>;
         Vue.use(VueMaterial.default);
         var HOST = location.origin.replace('https', 'wss');
-        var ws = new WebSocket(HOST, {transports: ['websocket']});
+        var ws = new WebSocket(HOST);
         var app = new Vue({
             el: '#app',
             data: {
